--- a/src/app/components/razonsocial/razonsocial.component.html
+++ b/src/app/components/razonsocial/razonsocial.component.html
@@ -13,5 +13,8 @@
             <tspan x="50%" dy="1.2em" class="interponer">formalizarse y crecer</tspan>
         </text>
     </svg>
-    <button class="registratelanding">REGISTRATE <BR> AHORA</button> 
+    <button  routerLink="registro"  class="registratelanding">REGISTRATE <BR> AHORA</button> 
 </body>
+
+<router-outlet></router-outlet>
+
