--- a/src/app/views/registro/registro.component.html
+++ b/src/app/views/registro/registro.component.html
@@ -1,9 +1,22 @@
 
 <div class="register-container">
+
+
+
+   <div class="todo">
+    <button   class="main" id="mainButton" (click)="toggleButtons()"></button>
     
+    </div>
+     
+     <div  id="additionalButtons" class="hidden">
 
      <!-- Contenedor de controles (cambio de tema y selección de idioma) -->
      <div class="modos">
+
+    <div>
+        <button  routerLink="" class="home"></button>
+    </div>
+
      <div class="modos1">
      <div class="langua">
         <!-- Lista desplegable para seleccionar el idioma -->
@@ -23,6 +36,7 @@
      </div> 
     </div>
     </div>
+  </div>
 
 
     <!--logo-->
@@ -67,15 +81,14 @@
                          <span>Nombre Completo</span>
                      </label>
                  </div>
-     
-                 <div>
+             
+                 <div >
                      <label class="pure-material-textfield-outlined largo" for="email">
                          <input placeholder="" type="text" id="email" name="email" required autocomplete="off">
                          <span>Correo Electronico</span>
                      </label>
                  </div>
-
-                 
+            
                  <div class="eye">
                        <label class="pure-material-textfield-outlined largo" for="password">
                            <input placeholder="" [type]="passwordVisible ? 'text' : 'password'" id="password" name="password" required autocomplete="off">
@@ -84,10 +97,8 @@
                               <i id="iconoOjo" [ngClass]="passwordVisible ? 'fa fa-eye-slash' : 'fa fa-eye'"></i>
                           </button>
                        </label>
-  
-                        
                    </div>
-              
+               
   
                  <p class="data b">Datos de la Empresa</p>
      
@@ -98,10 +109,10 @@
                      </label>
                  </div>
      
-
+            
                  <div>
                     <p class="center">Tipo de persona</p>
-                    <div class="ches" id="che">
+                    <div class="ches"  id="che">
                         <div class="controlradio">
                             <label class="control">Natural
                                 <input id="che1" type="radio" name="radio" autocomplete="off" />
@@ -114,6 +125,7 @@
                         </div>
                     </div>
                 </div>
+           
 
                  <div>
                      <label class="pure-material-textfield-outlined largo" for="nit">
@@ -193,10 +205,7 @@
                          <span>Sitio wed (opcional)</span>
                      </label>
                  </div>
-
-               
-                 
-     
+ 
                  <div class="terms">
                      <div class="terms">
                      <input
@@ -206,12 +215,9 @@
                        autocomplete="off"/><label for="acceptTerms">Acepto <span class="color">Términos y Condiciones </span> y <span class="color">Politicas de proteccion de Datos</span></label> 
                    </div>
 
-
-
                </div>
   
-              
-     
+ 
                  <div class="boton">
                      <button type="submit" class="pure-material-button-contained">Crear</button>
                  </div>
@@ -219,111 +225,101 @@
           </div>
   
              <!--restro consultores-->
-      <div  *ngIf="isConsultorActive">
-
-             <form id="register2" class="register" autocomplete="off">
-  
+             <div  *ngIf="isConsultorActive">
+                <form  id="register2" class="register" autocomplete="off">
               
-              <p class="data a">Datos Personales</p>
-  
-              <div>
-                  <label class="pure-material-textfield-outlined largo" for="name">
-                      <input placeholder="" type="text" id="name1" name="name" required autocomplete="off">
+                  <p class="data a">Datos Personales</p>
+              
+                  <div>
+                    <label class="pure-material-textfield-outlined largo" for="name">
+                      <input  placeholder="" type="text" id="name1" required autocomplete="off">
                       <span>Nombre Completo</span>
-                  </label>
-              </div>
-  
-              <div>
-                  <label class="pure-material-textfield-outlined largo" for="email1">
-                      <input placeholder="" type="text" id="email1" name="email" required autocomplete="off">
+                    </label>
+                  </div>
+              
+                  <div>
+                    <label class="pure-material-textfield-outlined largo" for="email1">
+                      <input  placeholder="" type="text" id="email1" required autocomplete="off">
                       <span>Correo Electronico</span>
-                  </label>
-              </div>
-  
-              <div>
-                  <label class="pure-material-textfield-outlined largo" for="cedula">
-                      <input placeholder="" type="input" id="cedula1" name="cedula" autocomplete="off" required>
+                    </label>
+                  </div>
+              
+                  <div>
+                    <label class="pure-material-textfield-outlined largo" for="cedula">
+                      <input  placeholder="" type="text" id="cedula1" required autocomplete="off">
                       <span>Cedula</span>
-                  </label>
-              </div>
-  
-  
-            
-              <div class="eye">
+                    </label>
+                  </div>
+              
+                  <div class="eye">
                     <label class="pure-material-textfield-outlined largo" for="password1">
-                        <input placeholder="" [type]="passwordVisible ? 'text' : 'password'" id="password1" name="password" required autocomplete="off">
-                        <span>Contraseña</span>
-                        <button class="button-eye" id="togglePassword1" (click)="togglePasswordVisibility()" type="button">
-                           <i id="iconoOjo" [ngClass]="passwordVisible ? 'fa fa-eye-slash' : 'fa fa-eye'"></i>
-                       </button>
-                    </label>   
+                      <input placeholder="" [type]="passwordVisible ? 'text' : 'password'"  id="password1" required autocomplete="off">
+                      <span>Contraseña</span>
+                      <button class="button-eye" id="togglePassword1" (click)="togglePasswordVisibility()" type="button">
+                        <i id="iconoOjo" [ngClass]="passwordVisible ? 'fa fa-eye-slash' : 'fa fa-eye'"></i>
+                      </button>
+                    </label>
+                  </div>
+
+
+                 
+              
+                  <p class="data c">Información Académica/Profesional</p>
+              
+            
+                  <div>
+                    <label class="pure-material-textfield-outlined largo" for="">
+                        <select class="tipo" id="rol" (change)="onTipoChange($event)" required>
+                            <option selected disabled value="">--Rol--</option>
+                            <option value="estudiante">Estudiante</option>
+                            <option value="profesor">Profesor</option>
+                        </select>
+                    </label>
                 </div>
-        
-  
-                <p class="data c">Información Académica/Profesional</p>
-             
-                <div>
-                  <label class="pure-material-textfield-outlined largo" for="">
-                      <select class="tipo" id="tipo1" required>
-                          <option selected disabled value="">--Rol--</option>
-                          <option value="1">Estudiante</option>
-                          <option value="2">Profesor</option>
-                          
-                      </select>
-                  </label>
-              </div>
-  
-  
-              <div>
-                  <label class="pure-material-textfield-outlined largo" for="Departamento1">
-                      <input placeholder="" type="input" id="Departamento1" name="Departamento" autocomplete="off" required>
+              
+                  <div>
+                    <label class="pure-material-textfield-outlined largo" for="Departamento1">
+                      <input  placeholder="" type="text" id="Departamento1" autocomplete="off">
                       <span>Departamento/Facultad</span>
-                  </label>
-              </div>
-  
-              <div>
-                  <label class="pure-material-textfield-outlined largo" for="programa">
-                      <input placeholder="" type="input" id="programa" name="programa" autocomplete="off" required>
+                    </label>
+                  </div>
+              
+                  <div>
+                    <label class="pure-material-textfield-outlined largo" for="programa">
+                      <input  placeholder="" type="text" id="programa" autocomplete="off">
                       <span>Programa/Carrera</span>
-                  </label>
-              </div>
-
-              <div>
-                <label class="pure-material-textfield-outlined largo" for="año">
-                    <input placeholder="" type="input" id="año" name="año" autocomplete="off" required>
-                    <span>Año de ingreso (para estudiantes)</span>
-                </label>
-              </div>
-
-              <div>
-                <label class="pure-material-textfield-outlined largo" for="">
-                    <select class="tipo" id="tipo3" required>
-                        <option selected disabled value="">--Periodo--</option>
-                        <option value="1">Primers semestre</option>
-                        <option value="2">segundo semestre</option>
-                        
-                    </select>
-                </label>
-            </div>
-             
-  
-              <div class="terms">
-                  <div class="terms">
-                  <input
-                   type="checkbox"
-                   id="acceptTerms1"
-                    name="acceptTerms" 
-                    autocomplete="off"/><label for="acceptTerms">Acepto <span class="color">Términos y Condiciones </span> y <span class="color">Politicas de proteccion de Datos</span></label> 
+                    </label>
+                  </div>
+              
+                  <div>
+                    <label class="pure-material-textfield-outlined largo" for="año">
+                      <input  placeholder="" type="text" id="año" autocomplete="off">
+                      <span>Año de ingreso (para estudiantes)</span>
+                    </label>
+                  </div>
+            
+                  <div>
+                    <label class="pure-material-textfield-outlined largo" for="">
+                        <select class="tipo" id="periodos" required>
+                            <option selected disabled value="">--Periodo--</option>
+                            <option value="1">Primer semestre</option>
+                            <option value="2">Segundo semestre</option>
+                        </select>
+                    </label>
                 </div>
-             </div>
-  
-           
-  
-              <div class="boton">
-                  <button type="submit" id="boton4" class="pure-material-button-contained">Crear</button>
+              
+                  <div class="terms te">
+                    <input type="checkbox" formControlName="acceptTerms" id="acceptTerms1" autocomplete="off">
+                    <label for="acceptTerms">Acepto <span class="color">Términos y Condiciones</span> y <span class="color">Políticas de protección de Datos</span></label>
+                  </div>
+              
+                  <div class="boton">
+                    <button   type="submit" id="boton4" class="pure-material-button-contained">Crear</button>
+                  </div>
+              
+                </form>
               </div>
-          </form>
-      </div>
+              
 
     </div> 
       
