--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,29 @@
 
 
+/* You can add global styles to this file, and also import other style files */
+ 
+html {
+    font-size: 16px;
+ 
+}
+ 
+body {
+    
+    background-color: #040404;
+    color: #fff;
+    font-size: 16px;
+   
+}
+ 
+.weight-bold {
+    font-weight: bold;
+}
+ 
+.text-dark {
+    color: #6b6b6b;
+}
+ 
+.underline-hover:hover {
+    text-decoration: underline;
+}
+
