--- a/src/app/components/user-detail/user-detail.component.html
+++ b/src/app/components/user-detail/user-detail.component.html
@@ -2,7 +2,7 @@
   <div class="user-detail" *ngIf="editUser">
     <div class="field-group" *ngIf="fieldsVisibility['name']">
       <label for="name">Nombre:</label>
-      <input type="text" id="name" [(ngModel)]="editUser.name" [disabled]="!isEditing">
+      <input type="text" id="name" [(ngModel)]="userName" [disabled]="!isEditing">
     </div>
 
     <div class="field-group" *ngIf="fieldsVisibility['email']">
@@ -10,39 +10,14 @@
       <input type="email" id="email" [(ngModel)]="editUser.email" [disabled]="!isEditing">
     </div>
 
-    <div class="field-group" *ngIf="fieldsVisibility['empresa_asociada']">
-      <label for="empresa_asociada">Empresa Asociada:</label>
-      <input type="text" id="empresa_asociada" [(ngModel)]="editUser.empresa_asociada" [disabled]="!isEditing">
+    <div class="field-group" *ngIf="fieldsVisibility['programa']">
+      <label for="programa">Programa:</label>
+      <input type="text" id="programa" [(ngModel)]="editUser.programa" [disabled]="!isEditing">
     </div>
 
-    <div class="field-group" *ngIf="fieldsVisibility['edad']">
-      <label for="edad">Edad:</label>
-      <input type="number" id="edad" [(ngModel)]="editUser.edad" [disabled]="!isEditing">
-    </div>
-
-    <div class="field-group" *ngIf="fieldsVisibility['carrera']">
-      <label for="carrera">Carrera:</label>
-      <input type="text" id="carrera" [(ngModel)]="editUser.carrera" [disabled]="!isEditing">
-    </div>
-
-    <div class="field-group" *ngIf="fieldsVisibility['semestre']">
-      <label for="semestre">Semestre:</label>
-      <input type="number" id="semestre" [(ngModel)]="editUser.semestre" [disabled]="!isEditing">
-    </div>
-
-    <div class="field-group" *ngIf="fieldsVisibility['especialidad']">
-      <label for="especialidad">Especialidad:</label>
-      <input type="text" id="especialidad" [(ngModel)]="editUser.especialidad" [disabled]="!isEditing">
-    </div>
-
-    <div class="field-group" *ngIf="fieldsVisibility['anos_experiencia']">
-      <label for="anos_experiencia">Años de Experiencia:</label>
-      <input type="number" id="anos_experiencia" [(ngModel)]="editUser.anos_experiencia" [disabled]="!isEditing">
-    </div>
-
-    <div class="field-group" *ngIf="fieldsVisibility['cursos_impartidos']">
-      <label for="cursos_impartidos">Cursos Impartidos:</label>
-      <input type="text" id="cursos_impartidos" [(ngModel)]="editUser.cursos_impartidos" [disabled]="!isEditing">
+    <div class="field-group" *ngIf="fieldsVisibility['periodo']">
+      <label for="periodo">Periodo:</label>
+      <input type="text" id="periodo" [(ngModel)]="editUser.periodo" [disabled]="!isEditing">
     </div>
 
     <div class="field-group" *ngIf="fieldsVisibility['sector']">
@@ -50,24 +25,14 @@
       <input type="text" id="sector" [(ngModel)]="editUser.sector" [disabled]="!isEditing">
     </div>
 
-    <div class="field-group" *ngIf="fieldsVisibility['empleados']">
-      <label for="empleados">Empleados:</label>
-      <input type="number" id="empleados" [(ngModel)]="editUser.empleados" [disabled]="!isEditing">
+    <div class="field-group" *ngIf="fieldsVisibility['companyName']">
+      <label for="companyName">Nombre de la empresa:</label>
+      <input type="text" id="companyName" [(ngModel)]="editUser.companyName" [disabled]="!isEditing">
     </div>
 
-    <div class="field-group" *ngIf="fieldsVisibility['fundacion']">
-      <label for="fundacion">Fundación:</label>
-      <input type="number" id="fundacion" [(ngModel)]="editUser.fundacion" [disabled]="!isEditing">
-    </div>
-
-    <div class="field-group" *ngIf="fieldsVisibility['productos']">
-      <label for="productos">Productos:</label>
-      <input type="text" id="productos" [(ngModel)]="editUser.productos" [disabled]="!isEditing">
-    </div>
-
-    <div class="field-group" *ngIf="fieldsVisibility['facturacion_anual']">
-      <label for="facturacion_anual">Facturación Anual:</label>
-      <input type="number" id="facturacion_anual" [(ngModel)]="editUser.facturacion_anual" [disabled]="!isEditing">
+    <div class="field-group" *ngIf="fieldsVisibility['nit']">
+      <label for="nit">NIT:</label>
+      <input type="text" id="nit" [(ngModel)]="editUser.nit" [disabled]="!isEditing">
     </div>
   </div>
 </div>
