Resgistro button registro organziado enrutado hacia el login cuando den en registrarse

--- a/src/app/views/registro/registro.component.html
+++ b/src/app/views/registro/registro.component.html
@@ -219,7 +219,7 @@
               </div>
 
                 <div class="boton">
-                    <button  type="submit" class="pure-material-button-contained">Crear</button>
+                    <button id="crearBonton" type="submit" class="pure-material-button-contained" (click)="onRegister()">Crear</button>
                 </div>
 
             </form>
@@ -315,7 +315,7 @@
                  </div>
              
                  <div class="boton">
-                   <button   type="submit" id="boton4" class="pure-material-button-contained">Crear</button>
+                   <button   type="submit" id="boton4" class="pure-material-button-contained"  (click)="onRegister()">Crear</button>
                  </div>
              
                </form>
