--- a/src/app/components/user-detail/user-detail.component.html
+++ b/src/app/components/user-detail/user-detail.component.html
@@ -34,6 +34,44 @@
       <label for="nit">NIT:</label>
       <input type="text" id="nit" [(ngModel)]="editUser.nit" [disabled]="!isEditing">
     </div>
+
+    <div class="field-group" *ngIf="fieldsVisibility['role']">
+      <label for="role">Role:</label>
+      <input type="text" id="role" [(ngModel)]="editUser.role" [disabled]="!isEditing">
+    </div>
+
+    <div class="field-group" *ngIf="fieldsVisibility['password']">
+      <label for="password">Password:</label>
+      <input type="password" id="password" [(ngModel)]="editUser.password" [value]="'*********'" [disabled]="!isEditing">
+    </div>
+
+    <div class="field-group" *ngIf="fieldsVisibility['address']">
+      <label for="address">Address:</label>
+      <input type="text" id="address" [(ngModel)]="editUser.address" [disabled]="!isEditing">
+    </div>
+
+    <div class="field-group" *ngIf="fieldsVisibility['phone']">
+      <label for="phone">Phone:</label>
+      <input type="text" id="phone" [(ngModel)]="editUser.phone" [disabled]="!isEditing">
+    </div>
+
+    <div class="field-group" *ngIf="fieldsVisibility['website']">
+      <label for="website">Website:</label>
+      <input type="text" id="website" [(ngModel)]="editUser.website" [disabled]="!isEditing">
+    </div>
+  </div>
+  <div class="field-group" *ngIf="fieldsVisibility['empresa_asignada']">
+    <label>Empresas asignadas:</label>
+    <ul>
+      <li *ngFor="let empresa of editUser.empresa_asignada">{{ empresa }}</li>
+    </ul>
+  </div>
+  
+  <div class="field-group" *ngIf="fieldsVisibility['estudante_asignado']">
+    <label>Estudiantes asignados:</label>
+    <ul>
+      <li *ngFor="let estudiante of editUser.estudante_asignado">{{ estudiante }}</li>
+    </ul>
   </div>
 </div>
 <div class="button-container">
