se crea la grafica del radar

--- a/src/app/views/panel-administracion/panel-administracion.component.html
+++ b/src/app/views/panel-administracion/panel-administracion.component.html
@@ -6,11 +6,12 @@
     <div class="charts">
       <div class="chart-panel">
         <h2>Posición competitiva deseada</h2>
-        <app-chart></app-chart>
+        <app-chart [companyId]="selectedCompanyId" chartType="clock"></app-chart>
       </div>
       <div class="chart-panel">
         <h2>Gráfico 2</h2>
-        <!-- Otro gráfico o contenido aquí -->
+        <app-chart [companyId]="selectedCompanyId" chartType="radar"></app-chart>
+
       </div>
       <div class="chart-panel">
         <h2>Gráfico 3</h2>
@@ -18,7 +19,7 @@
       </div>
     </div>
     <div class="user-section">
-      <app-user-list (userSelected)="selectedUser = $event"></app-user-list>
+      <app-user-list (userSelected)="onUserSelected($event); selectedUser = $event"></app-user-list>
       <app-user-detail [user]="selectedUser" (userUpdated)="updateUser($event)"></app-user-detail>
     </div>
   </div>
