--- a/src/app/views/login/login.component.css
+++ b/src/app/views/login/login.component.css
@@ -1,436 +1,71 @@
-/* Reseteo de márgenes y padding para todos los elementos */
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-/* Color de letra para el register */
-.fontcolor
-{
-    color: #fff;
-    padding: 10px;
+  *{
+    font-family: "Inter", sans-serif;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
-  /* Tipo de Font para la página (Inter)*/
-:root {
-    font-family: Inter, sans-serif;
-    font-feature-settings: 'liga' 1, 'calt' 1; /* fix for Chrome */
+
+  
+  .derechalogin {
     
-  }
-  @supports (font-variation-settings: normal) {
-    :root { font-family: InterVariable, sans-serif; }
-  }
-/* Estilos generales para el cuerpo de la página */
-body {
-    font-family: "Inter", sans-serif, Arial;
-    background-color: #000; /* Fondo negro por defecto */
-    color: #fff; /* Texto blanco por defecto */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    transition: background-color 0.3s, color 0.3s; /* Transición suave entre temas */
-}
-
-/* Contenedor principal */
-.container {
-    display: flex;
-    width: 80%;
-    max-width: 1200px;
-}
-
-/* Sección izquierda */
-.left-section {
-    flex: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
-}
-
-/* Imagen del logo en la sección izquierda */
-.logo-image {
-    width: 100%; /* Ancho de la imagen relativo al contenedor */
-    max-width: 300px; /* Tamaño máximo de la imagen */
-}
-/* Borde sólido para ver los límites de cada caja*/
-.borde
-{
- border: 10px solid red ;
-}
-/* Sección derecha (formulario de inicio de sesión) */
-.right-section {
-    flex: 0.8;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: #000; /* Fondo oscuro */
-    padding: 40px;
-    position: sticky;
-    border-radius: 15px; /* Bordes redondeados */
-    margin-top: 12rem;
-    margin-left: 15rem;
-    border: 5px solid #053295; /* Borde azul */
-    height: 500px;
-    width: 600px;
-    right: 0;
-    box-sizing: border-box; /* Asegura que padding y borde se incluyan en las dimensiones */
-}
-/* Media queries para una variopinta cantidad de resoluciones */
-@media (max-width: 1400px) {
-    .right-section {
-        margin-left: 12rem;
-        width: 70%;
-    }
-}
-
-@media (max-width: 1200px) {
-    .right-section {
-        margin-left: 10rem;
-        width: 70%;
-    }
-}
-
-@media (max-width: 1024px) {
-    .right-section {
-        margin-left: 5rem;
-        width: 80%;
-    }
-}
-
-@media (max-width: 900px) {
-    .right-section {
-        margin-left: 2rem;
-        width: 85%;
-    }
-}
-
-@media (max-width: 768px) {
-    .right-section {
-        margin: 6rem auto; /* Centra horizontalmente y ajusta el margen superior */
-        width: 90%;
-        padding: 20px;
-    }
-}
-
-@media (max-width: 600px) {
-    .right-section {
-        margin: 4rem auto; /* Centra horizontalmente y ajusta el margen superior */
-        width: 95%;
-        padding: 15px;
-    }
-}
-
-@media (max-width: 480px) {
-    .right-section {
-        margin: 3rem auto; /* Centra horizontalmente y ajusta el margen superior */
+        background-color: black;
+        color: white;
+        margin: 0;
+        height: 100vh;
+        display: flex;
+        
+     }
+  .login-now {
+        height: 100%;
         width: 100%;
-        padding: 10px;
+        display: flex;
     }
-}
-
-@media (max-width: 320px) {
-    .right-section {
-        margin: 2rem auto; /* Centra horizontalmente y ajusta el margen superior */
-        width: 100%;
-        padding: 5px;
+  .left-info, .right-info {
+        flex: 1;
+        justify-content: center;
+        align-items: center;
     }
-}
-
-/* Caja del formulario de inicio de sesión */
-.login-box {
-    text-align: center;
-    width: 100%;   
-}
-
-/* Título de la caja de inicio de sesión */
-.login-box h2 {
-    margin-bottom: 10px;
-    font-size: 2em;
-}
-/* Párrafos dentro de la caja de inicio de sesión */
-._welcome
-{
-    margin-bottom: 50px;
-    margin-top: 0rem;
-}
-.login-info{
-    margin-bottom: 25px;
-    margin-top: -1rem;
-}
-.register-now
-{ 
-    position: fixed;
-    bottom: 115px;
-    right: 475px;
-    padding: 10px;  
+  
+  .left-info {
+         display:flex;
+        justify-content: center;
+        align-items: center;
+    }
+  
+  
+  
+  @media (max-width: 700px) {
+    .login-now {
+      flex-direction: column;
+    }
+  
+    .by-eafit {
+      margin-top: -3rem;
+      gap: 0.5rem; 
+    }
+  
+    .imagen-logo {
+      width: 4.5rem;
+      height: 2rem; 
+    }
+  
+    h1 {
+      font-size: 1.5rem; 
+    }
+  
+    p {
+      display: none;
+    }
     
-}
-
-/* Distancia entre el párrafo de TyC y el login*/
-.TyC
-{
+    .left-info {
+    flex: 0 0 5%;
+  }
   
-    margin-top: 20px;
-    color: #7d7d7d;
-    font-size: small;
+  .right-info {
+    flex: 0 0 60%; 
+    margin-top: -2rem;
     
-}
-
-/* Estilos para el formulario */
-.login-box form {
-    display: relative;
-    flex-direction: column;
-    align-items: center;
-    align-self: center;
-}
-
-/* Campos de entrada en el formulario */
-.login-box input {
-    width: 80%;
-    padding: 10px;
-    margin: 10px 0;
-    border: none;
-    border-radius: 5px; /* Bordes redondeados */
-}
-
-/* Botón de inicio de sesión */
-.login-box button {
-    padding: 10px 20px;
-    background-color: #0052ff; /* Color de fondo azul */
-    border: none;
-    border-radius: 15px; /* Bordes redondeados */
-    color: #fff; /* Texto blanco */
-    cursor: pointer;
-    margin-top: 5px;
-    margin-bottom: 10px;
-}
-
-/* Enlaces dentro de la caja de inicio de sesión */
-.login-box a {
-    color: #0052ff;
-    text-decoration: none;
-}
-
-/* Contenedor de los controles (tema e idioma) */
-.controls {
-    position: absolute;
-    top: 20px;
-    right: 20px;
-    display: flex;
-    align-items: center;
-}
-
-/* Estilos para el botón de cambio de tema y el select de idioma */
-.controls select, .controls button {
-    background: none;
-    border: none;
-    color: #fff; /* Texto blanco */
-    cursor: pointer;
-    font-size: 1em;
-    margin-left: 10px;
-}
-
-/* Estilos específicos para el select de idioma */
-.controls select {
-    background: #000; /* Fondo negro */
-    border: 1px solid #fff; /* Borde blanco */
-    border-radius: 5px; /* Bordes redondeados */
-    padding: 5px;
-    color: #fff; /* Texto blanco */
-}
-
-/* Estilos para el modo claro */
-body.light-mode {
-    background-color: #f5f5f5; /* Fondo blanco pálido */
-    color: #000; /* Texto negro */
-}
-
-/* Fondo de la sección derecha en modo claro */
-body.light-mode .right-section {
-    background-color: #fff; /* Fondo blanco */
-}
-
-/* Color del botón de cambio de tema en modo claro */
-body.light-mode .controls button {
-    color: #ffff; /* Texto blanco */
-}
-
-/* Color del select de idioma en modo claro */
-body.light-mode .controls body.light-mode .controls button {
-    color: #ffff ; /* Texto blanco */
-}
-
-/* Borde gris para los campos de entrada en modo claro */
-body.light-mode .login-box input {
-    border: 1px solid #ccc; /* Borde gris */
-}
-
-/* Botones de idioma y Slider de Tema Oscuro*/
-.register-container {
-    width: 15rem;
-    height: 1rem;
-    background-color: black;
-    -webkit-transition: .4s;
-    transition: .4s;
-    display: flex;
-    align-items: flex-start;
-    padding: 50px 10px 0px;
-    position: fixed; /* Fija el elemento en la pantalla */
-    top: 0;          /* Alinea el elemento en la parte superior */
-    right: 80px;         /* Alinea el elemento a la izquierda */
-    width: 10%;     /* Asegura que el contenedor ocupe todo el ancho de la página */
-    z-index: 2;
- }
- 
- .light-mode {
-    background-color: white;
-    color: black;
-   
- }
- 
- .light-mode .slider {
-    border: black solid 0.125rem; 
- }
- 
- .light-mode .language {
-   background-color: white;
-   color: black;
-   border: black solid 0.125rem;
- }
- 
- .light-mode .home {
-   border: black solid 0.125rem;
-   background: url('https://res.cloudinary.com/dduyeudcy/image/upload/v1722729083/fznjrjzijebiaijttr6y.png') no-repeat center center;
- }
- 
- .dark-mode {
-    background-color: #030205;
-    -webkit-transition: .4s;
-    transition: .4s;
- }
- 
- .language {
-    border: white solid 0.125rem;
-    border-radius: 1.875rem;
-    color: white;
-    background-color: black;
-    width: 6.25rem;
-    height: 1.875rem;
-    padding: 0rem 0.625rem 0rem;
-    font-size: 1.125rem;
-    margin: 5px;
- }
- 
- .home {
-   border-radius: 1rem;
-    width: 3rem;
-    height: 1.875rem;
-    background: url('https://res.cloudinary.com/dduyeudcy/image/upload/v1722729129/o1bxn3mmr3rzbct5t5v3.png') no-repeat center center;
- }
- 
- .home:active {
-   background-color:  #0000ff; /* Color de fondo al hacer clic */
-  
- }
- 
- 
- 
- .modos {
-   display: flex;
-   justify-content: space-between;
-    width: 4rem;
-    height: 4rem;
- }
- 
- .modo {
-    width: 4rem;
-    height: 4rem;
-    margin-left: 0px;
-    margin-top: -27px;
-    margin: 5px;
-   translate: 40px -25px; 
- }
- 
- .switch {
-    position: relative;
-    margin-left: 100%;
-    top: 40%;
-    transform: translateX(-50%) translateY(25rem);
-    width: 8.75rem;
-    height: 4.375rem;
- }
- 
- .switch input { 
-    opacity: 0;
-    width: 0;
-    height: 0;
- }
- 
- .slider {
-    width: 4.25rem;
-    height: 1.800rem;
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: white;
-    -webkit-transition: .4s;
-    transition: .4s;
-    border: white solid 0.125rem;
-    border-radius: 1.875rem;
-    
- }
- 
- .slider:before {
-    position: absolute;
-    content: "";
-    height: 2.5rem;
-    width: 2.5rem;
-    left: 3.125rem;
-    bottom: 0.25rem;
-    background: url('https://res.cloudinary.com/dduyeudcy/image/upload/v1721485960/icons8-luna-creciente-20_t9pa5h.png') no-repeat center center;
-    -webkit-transition: .4s;
-    transition: .4s;
-    margin-left: -20px;
-    top: -7px;
- }
- 
- .slider:after {
-    content: "";
-    position: absolute;
-    border-radius: 50%;
-    left: 0;
-    bottom: 0.5625rem;
-    width: 2.5rem;
-    opacity: 0;
-    height: 2.5rem;
-    -webkit-transition:.2s;
-    transition: .2s;
-    margin-left: -2px;
-    top: -10px;
-    transform: rotate(180deg);
-    background: url('https://res.cloudinary.com/dduyeudcy/image/upload/v1721486195/icons8-sun-20_1_l1bwx3.png') no-repeat center center;
- }
- 
- input:checked + .slider:after {
-    left: auto;
-    opacity: 1;
-    -webkit-transform: translateX(6.25rem);
-    -ms-transform: translateX(6.25rem);
-    transform: translateX(6.25rem);
-    transform: translateY(0.3125rem);
-    -webkit-transition: .5s;
-    transition: .5s;
- }
- 
- input:checked + .slider {
-    background-color: black;
- }
- 
-  
-  
-  
+  }
+  }
   
