se organizo log in

--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -1,10 +1,12 @@
+<div class="login-container">
 
 <div class="derechalogin">
   <header>
     <app-funcionesglobales></app-funcionesglobales>
 </header>
   <!-- Contenedor de controles (cambio de tema y selección de idioma) -->
-<section class="login-now">
+
+  <section class="login-now">
    <div class="left-info">
     <app-logomasslogan></app-logomasslogan>
    </div>
@@ -13,5 +15,8 @@
    </div>
 </section>
 
+</div>
+
+   
 </div>
     
