--- a/src/app/components/formslogin/formslogin.component.html
+++ b/src/app/components/formslogin/formslogin.component.html
@@ -4,20 +4,20 @@
         <p data-translate="createAccount"class="login-info"></p>
         <p data-translate="enterEmail"class="login-info">Inicia sesión con tus datos</p>
        <!-- login.component.html -->
-<form >
-<label for="email">Correo Electrónico:</label>
-<input type="email" id="email" name="email" required>
-
-<label for="password">Contraseña:</label>
-<input type="password" id="password" name="password" required>
-
-<button type="submit">Iniciar Sesión</button>
-</form>
-
-        <p class= "TyC" data-translate="agreement">Al hacer clic en continuar, acepta nuestros <a href="#" class="TyC">Términos de servicio</a> y <a href="#" class="TyC">Política de privacidad</a></p>
         
-    </div>
-   
+  <form (ngSubmit)="login()">
+    <label for="email">Correo Electrónico:</label>
+    <input type="email" id="email" [(ngModel)]="email" name="email" required>
+  
+    <label for="password">Contraseña:</label>
+    <input type="password" id="password" [(ngModel)]="password" name="password" required>
+  
+    <button type="submit">Iniciar Sesión</button>
+  </form>
+  
+  <p class= "TyC" data-translate="agreement">Al hacer clic en continuar, acepta nuestros <a href="#" class="TyC">Términos de servicio</a> y <a href="#" class="TyC">Política de privacidad</a></p>
 </div>
+
 <p class="fontcolor register-now">¿Aún no tienes una cuenta? <a href="#" routerLink='/registro'>¡Regístrate ahora!</a></p>
-<router-outlet></router-outlet>
+
+  <router-outlet></router-outlet>
