se agrega componente circulo-dorado

--- a/src/app/views/panel-administracion/panel-administracion.component.html
+++ b/src/app/views/panel-administracion/panel-administracion.component.html
@@ -14,7 +14,9 @@
 
       </div>
       <div class="chart-panel">
+       
         <h2>Gráfico 3</h2>
+        <app-circulo-dorado></app-circulo-dorado>
         <!-- Otro gráfico o contenido aquí -->
       </div>
     </div>
