--- a/src/app/components/circulo-dorado/circulo-dorado.component.css
+++ b/src/app/components/circulo-dorado/circulo-dorado.component.css
@@ -1,11 +1,10 @@
 .circle-container {
        position: relative;
-       width: 90%;
-       height: 90%;
+       width: 100%;
+       height: 100%;
        margin: 5%;
-       background-color: black;
-       border: 5px solid #0000ff;
-       border-radius: 10px;
+   
+     
      }
      
      .title {
@@ -20,7 +19,7 @@
      }
      
      .circle {
-       margin: 15% 25%;
+       
        position: absolute;
        border-radius: 50%;
        text-align: center;
@@ -33,18 +32,19 @@
        padding: 10px;
        box-sizing: border-box;
        border: 4px solid white;
+       translate: -50px -76px;
      }
      
      #que {
-       position: relative;
-       width: 18.75rem;
-       height: 18.75rem;
+       position: absolute;
+       width: 12.5rem;
+       height: 12.5rem;
        align-items: flex-end;
        background-color: #DDAC17;
        top: 0;
        left: 0;
        z-index: 1;
-       font-size: 18px;
+       font-size: 13px;
        font-family: Inter, sans-serif;
      }
      
@@ -58,19 +58,19 @@
      
      #como {
        position: relative;
-       width: 12.5rem;
-       height: 12.5rem;
+       width:  6.5rem ;
+       height:  6.5rem ;
        align-items: flex-end;
        background-color: #EEC440;
        top: 50px;
        left: 50px;
        z-index: 2;
-       font-size: 15px;
+       font-size: 12px;
        font-family: Inter, sans-serif;
      }
      
      #como:hover {
-       font-size: 21px;
+       font-size: 16px;
      }
      
      #como:active {
@@ -78,15 +78,16 @@
      }
      
      #porque {
-       position: relative;
-       width: 6.25rem;
-       height: 6.25rem;
+       position: absolute;
+       width: 3.125rem;
+       height: 3.125rem;
        background-color: #FFFA8A;
        top: 100px;
        left: 100px;
        z-index: 3;
-       font-size: 13px;
+       font-size: 8px;
        font-family: Inter, sans-serif;
+       translate: -75px -105px;
      }
      
      #porque:hover {
@@ -98,17 +99,24 @@
      }
      
      #explanation {
-       position: relative;
-       margin-top: 60%;
-       margin-left: 10%;
-       width: 80%;
-       height: 10px;
-       padding: 10px;
-       color: white;
-       background-color: rgb(198, 30, 232);
-       border: 2px solid #0000ff;
-       border-radius: 5px;
-       box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-       display: none;
-     }
+      position: absolute;
+      margin-top: 60%;
+      margin-left: 1%;
+      width: 15rem;
+      padding: 10px;
+      color: white;
+      background-color: black;
+      border: 2px solid #0000ff;
+      border-radius: 5px;
+      box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+      font-size: 12px;
+      /* Mantén el tamaño del contenedor fijo */
+      max-height: 20px; /* Puedes ajustar esta altura según lo necesites */
+      overflow-y: auto; /* Habilita el desplazamiento vertical si el contenido es demasiado largo */
+      translate: -80px -40px;
+      display: none;
+    }
      
+
+    
+    
