--- a/src/app/views/panel-administracion/panel-administracion.component.html
+++ b/src/app/views/panel-administracion/panel-administracion.component.html
@@ -20,11 +20,14 @@
             <h2>Gráfico 2</h2>
             <app-chart [companyId]="selectedCompanyId" chartType="radar"></app-chart>
           </div>
-          <div class="chart-panel">
-            <h2>Gráfico 3</h2>
+          
+          <div class="chart-panel circulo">
+          
           <app-circulo-dorado></app-circulo-dorado>
             <!-- Otro gráfico o contenido aquí -->
           </div>
+
+
         </div>
         <!-- Sección de usuarios -->
         <div class="user-section">
