--- a/src/app/views/panel-administracion/panel-administracion.component.html
+++ b/src/app/views/panel-administracion/panel-administracion.component.html
@@ -22,10 +22,8 @@
           </div>
           
           <div class="chart-panel circulo">
-          
-          <app-circulo-dorado></app-circulo-dorado>
-            <!-- Otro gráfico o contenido aquí -->
-          </div>
+          <app-circulo-dorado [companyId]="selectedCompanyId"></app-circulo-dorado>
+        </div>
 
 
         </div>
