se empezo a trabajar el modo claro en login/panel/admin

--- a/src/app/views/landing-page/landing-page.component.html
+++ b/src/app/views/landing-page/landing-page.component.html
@@ -1,6 +1,6 @@
-<body>
+<body [ngClass]="currentTheme">
 <div class="headerlanding">
-    <app-funcionesglobales></app-funcionesglobales>
+    <app-funcionesglobales (themeChange)="changeTheme($event)"></app-funcionesglobales>
     <app-header></app-header>
 </div>
 <div>
