--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -1,8 +1,9 @@
+
 <div class="login-container">
 
 <div class="derechalogin">
   <header>
-    <app-funcionesglobales></app-funcionesglobales>
+    <app-funcionesglobales (themeChange)="changeTheme($event)"></app-funcionesglobales>
 </header>
   <!-- Contenedor de controles (cambio de tema y selección de idioma) -->
 
