--- a/src/app/views/panel-administracion/panel-administracion.component.html
+++ b/src/app/views/panel-administracion/panel-administracion.component.html
@@ -1,7 +1,7 @@
 
-<body>
+<body [ngClass]="currentTheme">
   <header>
-      <app-funcionesglobales></app-funcionesglobales>
+      <app-funcionesglobales (themeChange)="changeTheme($event)"></app-funcionesglobales>
   </header>
   <!-- Contenedor de controles (cambio de tema y selección de idioma) -->
   <section class="admin-panel">
