--- a/src/app/views/panel-administracion/panel-administracion.component.html
+++ b/src/app/views/panel-administracion/panel-administracion.component.html
@@ -1,5 +1,5 @@
 
-<body>
+<div class="bod">
   <header>
       <app-funcionesglobales (themeChange)="changeTheme($event)"></app-funcionesglobales>
   </header>
@@ -38,7 +38,7 @@
         </div>
       </div>
   </section>
-</body>
+</div>
 
 
 
