--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -3,11 +3,11 @@
 
 <div class="derechalogin">
   <header>
-    <app-funcionesglobales (themeChange)="changeTheme($event)"></app-funcionesglobales>
+    <app-funcionesglobales></app-funcionesglobales>
 </header>
   <!-- Contenedor de controles (cambio de tema y selección de idioma) -->
 
-  <section class="login-now">
+<section class="login-now">
    <div class="left-info">
     <app-logomasslogan></app-logomasslogan>
    </div>
