--- a/src/app/views/landing-page/landing-page.component.html
+++ b/src/app/views/landing-page/landing-page.component.html
@@ -1,6 +1,6 @@
 <div class="conten">
 <div class="headerlanding">
-    <app-funcionesglobales (themeChange)="changeTheme($event)"></app-funcionesglobales>
+    <app-funcionesglobales  [showElement]="false" (themeChange)="changeTheme($event)"></app-funcionesglobales>
     <app-header></app-header>
 </div>
 <div>
