--- a/src/app/components/contactanos/contactanos.component.html
+++ b/src/app/components/contactanos/contactanos.component.html
@@ -1,5 +1,5 @@
 
-<body>
+<div class="c-ten">
     <div class="container">
         <svg class="svg1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 752 681" fill="none">
             <path d="M738.126 339.744C698.119 631.665 927.659 691.942 369.063 679.489C165.235 679.489 0 527.38 0 339.744C0 152.109 165.235 0 369.063 0C572.891 0 738.126 152.109 738.126 339.744Z" fill="#0000FF" fill-opacity="0.7"/>
@@ -17,4 +17,4 @@
             </form>
         </div>
     </div>
-</body>
+</div>
