--- a/src/app/components/diagnostico/diagnostico.component.html
+++ b/src/app/components/diagnostico/diagnostico.component.html
@@ -1,4 +1,4 @@
-<body>
+<div class="co-te">
     <div class="container">
         <h1>Diagnóstico</h1>
         <div class="circles">
@@ -16,4 +16,4 @@
         </div>
         <p class="description">Utilizamos estos tres métodos para evaluar tu negocio y potenciar tus capacidades.</p>
     </div>
-</body>
+</div>
