--- a/src/app/components/encuentranos/encuentranos.component.html
+++ b/src/app/components/encuentranos/encuentranos.component.html
@@ -1,4 +1,4 @@
-<body>
+<div class="tt-cont">
     <div class="container">
         <div class="item item1">
             <h2>Horarios de Atención:</h2>
@@ -24,4 +24,4 @@
             </div>
         </div>
     </div>
-</body>
+</div>
