--- a/src/app/components/presentacion/presentacion.component.html
+++ b/src/app/components/presentacion/presentacion.component.html
@@ -1,4 +1,4 @@
-<body>
+<div class="cont">
    <div class="titulo">
      <h4>Evalua y mejora</h4>
      <h4>tus estrategias</h4>
@@ -12,4 +12,4 @@
    <div class="trayectory">
         <h5>Más de 20 años de experiencia del Grupo de <br> Estudio de Estrategia (GEE) de EAFIT<br> respaldan esta iniciativa.</h5>
    </div>
-</body>
+</div>
