--- a/src/app/components/razonsocial/razonsocial.component.html
+++ b/src/app/components/razonsocial/razonsocial.component.html
@@ -1,5 +1,5 @@
 
-<body>
+<div class="con-ten">
     <img src="https://res.cloudinary.com/dpeqdynym/image/upload/v1722374911/Default_A_warm_and_inviting_portrait_of_a_Colombian_woman_in_h_3_flig9i.jpg"  class="round-image">
     <svg  class="cuadrorazonsocial" xmlns="http://www.w3.org/2000/svg" width="423" height="376" viewBox="0 0 423 376" fill="none">
         <path d="M422.5 188C394 398.5 144.5 312.5 180 376C80.5887 376 0 291.83 0 188C0 84.1705 80.5887 0 180 0C279.411 0 406.5 0 422.5 188Z" fill="#1103AA"/>
@@ -14,6 +14,6 @@
         </text>
     </svg>
     <button  routerLink="registro"   class="registratelanding">REGISTRATE <BR>AHORA</button> 
-</body>
+    </div>
 
 <router-outlet></router-outlet>
