--- a/src/app/components/diagnostico/diagnostico.component.css
+++ b/src/app/components/diagnostico/diagnostico.component.css
@@ -1,7 +1,6 @@
-body {
+.co-te {
     margin: 0;
     font-family: Arial, sans-serif;
-    background-color: #000000;
     color: #333;
     overflow: hidden; /* Evita el scroll en la página */
     display: flex;
@@ -28,6 +27,7 @@ h1 {
 
 .circle {
     background-color: #fff;
+    border: 1px solid black;
     border-radius: 50%;
     width: 100px;
     height: 100px;
@@ -57,6 +57,12 @@ h1 {
     margin-top: 20px;
     font-size: 1rem;
 }
+
+/*modo claro */
+
+:host-context(.light-mode) h1, .plus, .description {
+     color: black;
+    }
 
 @media (max-width: 600px) {
     .circles {
