--- a/src/app/components/encuentranos/encuentranos.component.css
+++ b/src/app/components/encuentranos/encuentranos.component.css
@@ -1,7 +1,6 @@
-body {
+.tt-cont {
     margin: 0;
     font-family: Arial, sans-serif;
-    background-color: #000000;
     color: #ffffff;
     overflow: hidden; /* Evita el scroll en la página */
     display: flex;
@@ -65,6 +64,29 @@ body {
     height: 20px;
     margin: 0 0.3rem; /* Reduce el margen entre los iconos */
 }
+
+/*modo claro */
+
+:host-context(.light-mode) .item {
+ 
+    background-color: white;
+    color: black ;
+    box-shadow: none;
+    }
+
+:host-context(.light-mode) .titulo  {
+ 
+        color: black ;
+    }
+
+
+    :host-context(.light-mode) .item1 img {
+        content: url('https://res.cloudinary.com/dduyeudcy/image/upload/v1721519077/73cfbdea51a1a101764ae95123ae9372_mpxbnb.png');
+        width: 90px; /* Ajusta el tamaño de los iconos */
+        height:50px;
+        margin: 0 0.3rem; /* Reduce el margen entre los iconos */
+    }
+   
 
 /* Media Queries */
 @media (max-width: 768px) {
